--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,13 +4,22 @@ on:
   repository_dispatch
 
 jobs:
-  build-lib:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         version: [23.11]
 
     steps:
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: LS
+        run: 'ls'
+                
       - name: Test Send JSON
         run: 'python3 test.py "${{ github.event.client_payload }}"'
 
