--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,6 @@ jobs:
         run: 'ls'
 
       - name: Test Send JSON
-        run: 'python3 test.py "${{ github.event.client_payload }}"'
+        run: 'echo "${{ github.event.client_payload }}"'
 
 
