Added protoc-gen-doc (#4)
* Added protoc-gen-doc and changelog-v1

* Added protoc-gen-doc and changelog-v1

* protoc-gen-doc implemented & changelog-v1

* organized workflows

--- a/.github/workflows/gen.yaml
+++ b/.github/workflows/gen.yaml
@@ -45,4 +45,11 @@ jobs:
             ./proto/base_msgs.proto
             ./proto/hytech_msgs.proto
 
+      - name: Save tag name to file
+        run: echo ${{ steps.date.outputs.date }} > tag_name.txt
 
+      - name: Upload tag_name as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: tag-name-artifact
+          path: tag_name.txt
