--- a/.github/workflows/doc.yaml
+++ b/.github/workflows/doc.yaml
@@ -10,6 +10,8 @@ jobs:
   build-doc:
     runs-on: ubuntu-latest
     steps:
+      - uses: cachix/install-nix-action@v23
+      
       - name: Download artifact
         uses: dawidd6/action-download-artifact@v2
         with:
@@ -29,11 +31,8 @@ jobs:
 
       - name: Set up Protobuf tools and generate HTML file
         run: |
-          sudo apt-get install -y --no-install-recommends protobuf-compiler
-          go install github.com/pseudomuto/protoc-gen-doc/cmd/protoc-gen-doc@latest
-          export PATH=$PATH:$HOME/go/bin
           mkdir -p docs
-          protoc -I=proto --doc_out=./docs --doc_opt=html,${{ env.tag_name }}.html proto/*.proto
+          nix run .#html-generator -- ${{ env.tag_name }}
       
       - name: Upload asset to existing release
         uses: softprops/action-gh-release@v1
