--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ set(PROTO_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/generated/)
 set(LIBRARY hytech_msgs_cpp_lib)
 set(OBJECT_LIBRARY hytech_msgs_cpp_lib_object)
 
+find_package(Protobuf REQUIRED CONFIG)
+
     file(MAKE_DIRECTORY ${PROTO_BINARY_DIR})
 
     add_library(${OBJECT_LIBRARY} OBJECT 
